@@ -34,6 +34,7 @@ Version 2.0.xxxx (xxxx 2015)
 - Implemented: Devices tab, Barometer/Text log option
 - Changed: Wind sensor, now using max speed/gust in short log
 - Implemented: 'Toon' zwave switches support
+- Implemented: Support for Python scripts (thanks to Maarten!)
 
 Version 2.0.2284 (February 22th 2015)
 - Fixed: Firefox, RGBW/Setpoint popup
